# Persephone-Green

./: CSSE4011_final_project+ML.ipynb  README.md
PC/: README.md  main.py
base_node/: CMakeLists.txt  README.md  prj.conf  uart_test.py
base_node/src/: main.c
connected_bt_examples/central_bt_device/: CMakeLists.txt  README.md  prj.conf
connected_bt_examples/central_bt_device/src/: main.c
connected_bt_examples/peripheral_bt_device/: CMakeLists.txt  README.md  prj.conf
connected_bt_examples/peripheral_bt_device/src/: main.c
include/: HUB75_driver.h  UART.h
led_display/: CMakeLists.txt  README.md  prj.conf
led_display/boards/: nrf52840dk_nrf52840.overlay
led_display/src/: main.c
mobile_node/lsm6dsl/: CMakeLists.txt  README.md  prj.conf
mobile_node/lsm6dsl/boards/: disco_l475_iot1.overlay
mobile_node/lsm6dsl/src/: main.c
mylib/: HUB75_driver.c  UART.c
